chore: polish index.html (title, meta tags, dark-mode theme, noscript)

--- a/index.html
+++ b/index.html
@@ -2,11 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, viewport-fit=cover"
+    />
+    <meta name="color-scheme" content="light dark" />
+    <meta
+      name="description"
+      content="Dynamic Form Builder — create, validate, preview and save custom forms."
+    />
+    <!-- keep Vite’s default icon; swap to /favicon.svg later if you add one -->
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <!-- Optional: nicer PWA theme colors for light/dark -->
+    <meta name="theme-color" content="#1976d2" media="(prefers-color-scheme: light)" />
+    <meta name="theme-color" content="#90caf9" media="(prefers-color-scheme: dark)" />
+    <title>Dynamic Form Builder</title>
   </head>
   <body>
+    <noscript>
+      <strong>This app needs JavaScript enabled to run.</strong>
+    </noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
